# UTF.tech_resto_test

./: data_for_test.json  pyproject.toml  readme.md
config/: settings.py  urls.py
food/: admin.py  models.py  pagination.py  urls.py  views.py
food/migrations/: 0001_initial.py  0002_alter_food_options.py
